[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deporter"
version = "1.0.1-beta"
requires-python = ">= 3.10"
license-files = { paths = ["LICENSE"] }
authors = [
  { name="Refolli Francesco", email="francesco.refolli@gmail.com" }
]
maintainers = [
  { name="Refolli Francesco", email="francesco.refolli@gmail.com" }
]
description = "CLI Utility for moving and handling multiple Git Server origins"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "yaml",
  "dotenv",
  "requests",
  "coloredlogs"
]

[project.urls]
Repository = "https://github.com/frefolli/deporter"

[project.scripts]
deporter-cli = "deporter.__main__:main_cli"

[tool.hatch.build]
include = [
  "deporter/*.py",
  "deporter/*/*.py"
]
